tests/hopix/typechecker/bad/nonlinearpatterns.hopix
type t = A (int, int)

val test = A (0, 0) ? { A (x: int, x : int) => 0 }